--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "_moduleAliases": {
     "~app": "src/",
     "~components": "src/app/components/",
-    "~views": "src/app/views/"
+    "~views": "src/app/views/",
+    "~assets": "src/assets/"
   }
 }
